--- a/main.html
+++ b/main.html
@@ -30,14 +30,14 @@
         margin-top: 5px;
         padding:20px;
       }
-    
+
 
 
 
     </style>
   </head>
   <body>
-    <h1><a href="main.html"><img src="image/main_logo.png" style="margin-left: auto; margin-right: auto; display: block; " ></a></h1>
+    <h1><a href="main.html"><img src="main_logo.png" style="margin-left: auto; margin-right: auto; display: block; " ></a></h1>
 
 
     <div id="grid">
