--- a/백투베이직1.html
+++ b/백투베이직1.html
@@ -32,7 +32,7 @@
     </style>
   </head>
   <body>
-    <h1><a href="main.html"><img src="image/main_logo.png" style="margin-left: auto; margin-right: auto; display: block; " ></a></h1>
+    <h1><a href="main.html"><img src="main_logo.png" style="margin-left: auto; margin-right: auto; display: block; " ></a></h1>
     <div id="grid">
       <ul >
         <li><a href="깡으로버텨라1.html">깡으로 버텨라!!!</a></li><br>
@@ -47,7 +47,7 @@
         </div>
          <h1 style="text-align:center;">백 투 베이직</h1><br>
          <p style="text-align:center;">매일할수있는 지속력짱 베이스 메이크업 -보통 피부 타입- </p><iframe style="margin-left: auto; margin-right: auto; display: block;" width="854" height="480" src="https://www.youtube.com/embed/Yi6gbp1Lj5s?list=PLMQGTAwtel2y14sSeDqhe9PkRgg2Ow1tn" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><br>
-         
+
 
       </div>
 
