--- a/백투베이직2.html
+++ b/백투베이직2.html
@@ -32,7 +32,7 @@
     </style>
   </head>
   <body>
-    <h1><a href="main.html"><img src="image/main_logo.png" style="margin-left: auto; margin-right: auto; display: block; " ></a></h1>
+    <h1><a href="main.html"><img src="main_logo.png" style="margin-left: auto; margin-right: auto; display: block; " ></a></h1>
     <div id="grid">
       <ul >
         <li><a href="깡으로버텨라1.html">깡으로 버텨라!!!</a></li><br>
@@ -47,7 +47,7 @@
         </div>
          <h1 style="text-align:center;">백 투 베이직</h1><br>
          <p style="text-align:center;">글리터 제대로 활용하기!!(종류,위치,고르는법,활용법,클렌징까지)Glitter Special✨</p><iframe style="margin-left: auto; margin-right: auto; display: block;" width="854" height="480" src="https://www.youtube.com/embed/7dvTUj2_Dsg?list=PLMQGTAwtel2y14sSeDqhe9PkRgg2Ow1tn" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>></iframe><br>
-         
+
 
       </div>
 
