--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
     </style>
   </head>
   <body>
-    <h1><a href="main.html"><img src="main_logo." style="margin-left: auto; margin-right: auto; display: block; " ></a></h1>
+    <h1><a href="main.html"><img src="main_logo.PNG" style="margin-left: auto; margin-right: auto; display: block; " ></a></h1>
 
 
     <div id="grid">
