--- a/main.html
+++ b/main.html
@@ -54,10 +54,10 @@
       <div id="main">
         <div style="float:left;">
         <p style="text-align:center; font-size:50px; margin-top: 5px;">LISABAE</p>
-        <p><img src="image/profile.jpg"  height="500" width="360"></p></div>
-        <p><a href="https://www.youtube.com/channel/UC9kmlDcqksaOnCkC_qzGacA/featured"><img src="image/youtube.jpg" style="margin-left: auto; margin-right: auto; margin-top: 200px; display: block;" height="80" width="300"</p><br>
-        <p><a href="https://www.instagram.com/Risabae_art/"><img src="image/kakaotv.jpg" style="margin-left: auto; margin-right: auto; display: block;" height="80" width="300"</p><br>
-        <p><a href="https://tv.kakao.com/channel/2711672/cliplink/382734685?metaObjectType=Channel"><img src="image/instagram.jpg" style="margin-left: auto; margin-right: auto; display: block;" height="80" width="300"</p><br>
+        <p><img src="profile.jpg"  height="500" width="360"></p></div>
+        <p><a href="https://www.youtube.com/channel/UC9kmlDcqksaOnCkC_qzGacA/featured"><img src="youtube.jpg" style="margin-left: auto; margin-right: auto; margin-top: 200px; display: block;" height="80" width="300"</p><br>
+        <p><a href="https://www.instagram.com/Risabae_art/"><img src="kakaotv.jpg" style="margin-left: auto; margin-right: auto; display: block;" height="80" width="300"</p><br>
+        <p><a href="https://tv.kakao.com/channel/2711672/cliplink/382734685?metaObjectType=Channel"><img src="instagram.jpg" style="margin-left: auto; margin-right: auto; display: block;" height="80" width="300"</p><br>
         <p style="text-align:center;">★배너 클릭시 이동★</p>
 
       </div>
