--- a/깡으로버텨라3.html
+++ b/깡으로버텨라3.html
@@ -31,7 +31,7 @@
     </style>
   </head>
   <body>
-    <h1><a href="main.html"><img src="main_logo.png" style="margin-left: auto; margin-right: auto; display: block; " ></a></h1>
+    <h1><a href="main.html"><img src="main_logo.PNG" style="margin-left: auto; margin-right: auto; display: block; " ></a></h1>
     <div id="grid">
       <ul >
         <li><a href="깡으로버텨라1.html">깡으로 버텨라!!!</a></li><br>
